@@ -39,6 +39,7 @@ public class L1BMDynamicConfigurationTest extends AbstractCacheTestBase {
 
   public L1BMDynamicConfigurationTest(TestConfig testConfig) {
     super(testConfig, App.class, App.class);
+    testConfig.getClientConfig().addExtraClientJvmArg("--add-opens=java.base/java.lang=ALL-UNNAMED");
   }
 
   public static class App extends ClientBase {
