@@ -42,6 +42,7 @@ public class L1BMOnHeapReadWriteTest extends AbstractCacheTestBase {
 
   public L1BMOnHeapReadWriteTest(TestConfig testConfig) {
     super(testConfig, L1BMOnHeapReadWriteTestApp.class, L1BMOnHeapReadWriteTestApp.class);
+    testConfig.getClientConfig().addExtraClientJvmArg("--add-opens=java.base/java.lang=ALL-UNNAMED");
   }
 
   public static class L1BMOnHeapReadWriteTestApp extends ClientBase {
