@@ -40,6 +40,7 @@ public class L1BMOnHeapWithTTLSanityTest extends AbstractCacheTestBase {
 
   public L1BMOnHeapWithTTLSanityTest(TestConfig testConfig) {
     super(testConfig, App.class, App.class);
+    testConfig.getClientConfig().addExtraClientJvmArg("--add-opens=java.base/java.lang=ALL-UNNAMED");
   }
 
   public static class App extends ClientBase {
