@@ -40,6 +40,7 @@ public class BulkLoadInternalKeyRepresentationExposedTest extends AbstractCacheT
 
   public BulkLoadInternalKeyRepresentationExposedTest(TestConfig testConfig) {
     super(testConfig, App.class, App.class, App.class);
+    testConfig.getClientConfig().addExtraClientJvmArg("--add-opens=java.base/java.lang=ALL-UNNAMED");
   }
 
   public static class App extends ClientBase {
